(PC-38452)[PRO] fix: Alignment and allow forcing mobile state for debugging

--- a/pro/src/design-system/Pagination/Pagination.module.scss
+++ b/pro/src/design-system/Pagination/Pagination.module.scss
@@ -21,6 +21,7 @@
 // <nav>
 .pagination-nav {
   display: flex;
+  justify-content: center;
   color: var(--color-text-default);
 
   @include fonts.body-accent-xs;
